# llm-zoomcamp-rag

./: .gitignore  README.md  agentic_loop.ipynb  agentic_loop_toyaikit.ipynb  agents.ipynb  homework.ipynb  ingest_homework.py  notebook.ipynb  persistent_rag.ipynb  persistent_rag_ingest.ipynb  pyproject.toml  rag_helper_homework.py  rag_ingest.ipynb
chapter_1/: .gitignore  Part1_Summary.md  agentic_loop.ipynb  agentic_loop_toyaikit.ipynb  agents.ipynb  notebook.ipynb  persistent_rag.ipynb  persistent_rag_ingest.ipynb  rag_helper.py  rag_ingest.ipynb
chapter_2/: .gitignore  Chapter2_summary.md  vector_search.ipynb  vector_search_persistent.ipynb  vector_search_pgvector.ipynb
chapter_3/: homework.ipynb  research_report.md
chapter_4/: agent_evaluation.ipynb  evaluation.ipynb  evaluation_utils.py  rag_evaluation.ipynb  search_evaluation.ipynb
chapter_5/: Dockerfile  Makefile  app.py  assistant.py  dashboard.py  db_init.py  db_query.py  docker-compose.yaml  generate_data.py  judge.py  metrics.py  monitoring.ipynb  pyproject.toml
dlt_hw/: homework.ipynb  load_data.ipynb  load_traces.py  logfire_check.py  main.py  pyproject.toml
dlthub/: 2026-07-18_claude_logs_analysis_plan.md  __deployment__.py  agent_logs_dashboard.py  agent_logs_pipeline.py  claude_logs_dashboard.py  filesystem_pipeline.py  lesson-notes.md  process.md  pyproject.toml  rest_api_pipeline.py
dlthub/.dlt/: .toolkits  (+1 more)
llm-zoomcamp-hw5/: add_files.ipynb  homework.ipynb  homework_part1.ipynb  homework_part2.ipynb  pyproject.toml
llm-zoomcamp-onnx/: .gitignore  pipe_test.ipynb  pyproject.toml
(+10 files in other folders)
