[project]
name = "dlt-hw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dlt[duckdb]>=1.29.0",
    "importlib-metadata>=9.0.0",
    "logfire[system-metrics]>=3.5.1",
    "minsearch>=0.1.0",
    "openai>=2.41.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "pydantic-ai>=0.8.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
